# monado

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
.gitlab-ci/: install-cross.sh
schemas/: camera-calib-schema.json
scripts/: read-camera.py
src/: CMakeLists.txt  targets_enabled_drivers.h.cmake_in
src/xrt/: CMakeLists.txt
src/xrt/auxiliary/: CMakeLists.txt  meson.build
src/xrt/auxiliary/math/: m_api.h  m_base.cpp  m_eigen_interop.h  m_filter_timing.h  m_fusion.c  m_fusion.h  m_hash.cpp  m_imu.c  m_imu.cpp  m_imu.h  m_imu_3dof.c  m_imu_pre.c  m_imu_pre.h  m_quatexpmap.cpp  m_track.c
src/xrt/auxiliary/os/: os_ble.h  os_ble_dbus.c  os_time.h
src/xrt/auxiliary/tracking/: t_calibration.cpp  t_calibration.h  t_calibration_json.c  t_calibration_opencv.cpp  t_calibration_opencv.h  t_calibration_opencv.hpp  t_conefitting.cpp  t_conefitting.hpp  t_file.cpp  t_fusion.h  t_fusion.hpp  t_hsv_filter.c  t_imu.cpp  t_imu.h  t_imu_fusion.h  t_kalman.cpp  t_lowpass.h  t_tracker_blobs.cpp  t_tracker_blobs.h  t_tracker_leap.cpp  t_tracker_psmv.cpp  t_tracker_psmv_fusion.cpp  t_tracker_psmv_fusion.hpp  t_tracker_psvr.cpp  t_tracker_psvr_fusion.cpp  t_tracker_psvr_fusion.h  t_tracking.h
src/xrt/auxiliary/util/: u_abi.h  u_bitwise.c  u_bitwise.h  u_device.c  u_distortion.c  u_distortion.h  u_format.c  u_hashset.cpp  u_hashset.h  u_json.h  u_pscalib.c  u_pscalib.h  u_sink_converter.c  u_sink_pool.c  u_var.h
src/xrt/compositor/: CMakeLists.txt
src/xrt/compositor/common/: comp_vk.c  comp_vk.h  comp_vk_swapchain.c
src/xrt/compositor/main/: comp_compositor.c  comp_compositor.h  comp_distortion.c  comp_distortion.h  comp_renderer.c  comp_settings.c  comp_texture.c
src/xrt/compositor/shaders/: mesh.frag  mesh.vert  meshuv.frag  meshuv.vert  psvr_both_uvs.h
src/xrt/drivers/: CMakeLists.txt
src/xrt/drivers/daydream/: daydream_device.c  daydream_device.h  daydream_driver.c  daydream_interface.h  daydream_prober.c
src/xrt/drivers/hdk/: hdk_device.cpp  hdk_interface.h
src/xrt/drivers/hydra/: hydra_driver.c  hydra_interface.h
src/xrt/drivers/lgr100/: lgr100_device.c  lgr100_device.h  lgr100_interface.h
src/xrt/drivers/montrack/: CMakeLists.txt  mt_device.c  mt_device.h  mt_events.h  mt_framequeue.c  mt_framequeue.h  mt_interface.h  mt_prober.c
src/xrt/drivers/montrack/filters/: CMakeLists.txt  filter_complementary.c  filter_complementary.h  filter_opencv_kalman.cpp  filter_opencv_kalman.h
src/xrt/drivers/montrack/filters/common/: filter.c  filter.h  measurementqueue.c  measurementqueue.h
src/xrt/drivers/montrack/frameservers/: CMakeLists.txt
src/xrt/drivers/montrack/frameservers/common/: frameserver.c  frameserver.h
src/xrt/drivers/montrack/frameservers/ffmpeg/: ffmpeg_frameserver.c  ffmpeg_frameserver.h
src/xrt/drivers/montrack/frameservers/uvc/: uvc_frameserver.c  uvc_frameserver.h
src/xrt/drivers/montrack/frameservers/v4l2/: v4l2_frameserver.c  v4l2_frameserver.h
src/xrt/drivers/montrack/optical_tracking/: CMakeLists.txt  track_psvr.cpp  track_psvr.h  tracker3D_osvr_uvbi.cpp  tracker3D_osvr_uvbi.h  tracker3D_psvr_stereo.cpp  tracker3D_psvr_stereo.h  tracker3D_sphere_mono.cpp  tracker3D_sphere_mono.h  tracker3D_sphere_stereo.cpp  tracker3D_sphere_stereo.h  tracker3D_uvbi.cpp  tracker3D_uvbi.h
src/xrt/drivers/montrack/optical_tracking/common/: calibration.c  calibration.cpp  calibration.h  calibration_opencv.hpp  opencv_utils.hpp  tracked_object.h  tracker.c  tracker.h
src/xrt/drivers/ohmd/: oh_device.c  oh_prober.c
src/xrt/drivers/psmv/: psmv_driver.c
src/xrt/drivers/psvr/: psvr_both_uvs.h  psvr_device.c  psvr_device.h  psvr_prober.c
src/xrt/drivers/survive/: survive_device.c  survive_device.h  survive_driver.c  survive_interface.h  survive_prober.c  survive_wrap.c  survive_wrap.h
src/xrt/drivers/v4l2/: v4l2_driver.c
src/xrt/drivers/vive/: vive_device.c  vive_device.h  vive_prober.h
src/xrt/filters/: CMakeLists.txt  filter_opencv_kalman.cpp  filter_opencv_kalman.h
src/xrt/filters/common/: filter.c  filter.h
src/xrt/frameservers/: CMakeLists.txt
src/xrt/frameservers/common/: frameserver.c  frameserver.c.autosave  frameserver.h  frameserver.h.autosave
src/xrt/frameservers/ffmpeg/: ffmpeg_frameserver.c  ffmpeg_frameserver.h  ffmpeg_frameserver.h.autosave
src/xrt/frameservers/uvc/: uvc_frameserver.c  uvc_frameserver.h
src/xrt/frameservers/v4l2/: v4l2_frameserver.c  v4l2_frameserver.h
src/xrt/include/xrt/: xrt_compiler.h  xrt_compositor.h  xrt_defines.h  xrt_prober.h  xrt_tracking.h
src/xrt/optical_tracking/: CMakeLists.txt  CMakeLists.txt.autosave  tracker2D_blue_led.h  tracker3D_sphere_mono.c  tracker3D_sphere_mono.c.autosave  tracker3D_sphere_mono.cpp  tracker3D_sphere_mono.h  tracker3D_sphere_mono.h.autosave  tracker3D_sphere_stereo.cpp  tracker3D_sphere_stereo.h
src/xrt/optical_tracking/common/: calibration.h  calibration.h.autosave  distortion.h  opencv_utils.hpp  tracked_object.h  tracked_object.h.autosave  tracker.c  tracker.h
src/xrt/state_trackers/gui/: CMakeLists.txt  gui_scene_calibrate.c  gui_scene_debug.c
src/xrt/state_trackers/oxr/: CMakeLists.txt  oxr_api_verify.h  oxr_binding.c  oxr_binding_data.h  oxr_input.c  oxr_logger.cpp  oxr_objects.h  oxr_path.c  oxr_session.c  oxr_space.c  oxr_system.c  oxr_two_call.h  oxr_verify.cpp  oxr_xdev.c
src/xrt/state_trackers/prober/: CMakeLists.txt  meson.build  p_json.c  p_prober.c  p_prober.h  p_tracking.c
src/xrt/targets/: CMakeLists.txt  targets_enabled_drivers.h.cmake_in
src/xrt/targets/cli/: CMakeLists.txt  cli_cmd_fov.c  cli_common.h  cli_main.c  cli_prober.c  meson.build
src/xrt/targets/common/: CMakeLists.txt  target_lists.c
src/xrt/targets/gui/: CMakeLists.txt
src/xrt/targets/openxr/: CMakeLists.txt  target.c
tests/: CMakeLists.txt  tests_common.c  tests_common.h  tests_main.c  tests_system.c  tests_unit.c
